--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
     <p class="mb-0 text-light">Copyright ©<script>
         var CurrentYear = new Date().getFullYear()
         document.write(CurrentYear)
-      </script> a theme by <a href="themefisher.com">themefisher.com</a></p>
+      </script> Designed by <a href="https://www.nadeem-mohammed.co.za">Nadeem Mohammed</a></p>
   </div>
 </footer>
 <!-- /footer -->
